--- a/springcloud-nacos/pom.xml
+++ b/springcloud-nacos/pom.xml
@@ -17,7 +17,7 @@
     </properties>
 
     <dependencies>
-        <!-- nacos-->
+        <!-- nacos 服务注册与发现 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
