--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<module>springcloud-nacos</module>
 		<module>springcloud_consumer</module>
 		<module>springcloud_producer</module>
+		<module>springcloud-hystrix</module>
 	</modules>
 
 	<!-- 依赖约束 dependencyManagement元素中声明所依赖的jar包的版本号等信息，那么所有子项目再次引入此依赖jar包时则无需显式的列出版本号 -->
