--- a/pom.xml
+++ b/pom.xml
@@ -99,10 +99,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- spring cloud -->
+		<!-- 开启 Bootstrap 配置文件的支持 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>3.0.3</version>
 		</dependency>
 
 		<!-- 没有该依赖会启动失败，原因未知 -->
@@ -127,6 +128,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.version}</version>
 			</plugin>
 		</plugins>
 	</build>
