--- a/springcloud-zuul/src/main/resources/bootstrap.yml
+++ b/springcloud-zuul/src/main/resources/bootstrap.yml
@@ -1,11 +1,10 @@
 server:
-  port: 10002
+  port: 8083
 
 spring:
   application:
-    name: app-consumer
+    name: app-zuul
   cloud:
-    # nacos
     nacos:
       discovery: # 把本项目注册到下面的配置下
         server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 服务注册中心地址
