--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<module>springcloud_consumer</module>
 		<!-- 服务提供者 -->
 		<module>springcloud_producer</module>
+		<module>springcloud_producer2</module>
 		<!-- 服务熔断与降级 -->
 		<module>springcloud-hystrix</module>
 		<!-- 服务调用与负载均衡 -->
