--- a/springcloud_producer2/src/main/resources/bootstrap.yml
+++ b/springcloud_producer2/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 server:
-  port: 10001
+  port: 10011
 
 spring:
   application:
@@ -10,4 +10,4 @@ spring:
       discovery: # 把本项目注册到下面的配置下
         server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 服务注册中心地址
         namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82
-        group: g_nacos_01 # 命名空间和group可以和其他的服务完全相同，这样会有负载均衡的效果
+        group: g_nacos_01
