--- a/springcloud-nacos/src/main/resources/bootstrap-dev.yml
+++ b/springcloud-nacos/src/main/resources/bootstrap-dev.yml
@@ -45,7 +45,7 @@ spring:
 #          group: h_2
 #          refresh: true
 
-      discovery: # 把本项目注册到下面的配置下
+      discovery: # 把本项目注册到下面的配置下，如果不配置，则会默认注册到 public 下面
         server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 服务注册中心地址
         namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82
         group: g_nacos_01
