--- a/springcloud-sentinel/pom.xml
+++ b/springcloud-sentinel/pom.xml
@@ -27,7 +27,7 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <!-- 用于把 sentinel 的规则持久化到 nacos 里。
+        <!-- 用于把 sentinel 的规则持久化到 nacos/本地。
         该 springcloud-sentinel 项目重启后，配置的规则会消失，因此需要该依赖 -->
         <dependency>
             <groupId>com.alibaba.csp</groupId>
