--- a/springcloud-sentinel/src/main/resources/application.yml
+++ b/springcloud-sentinel/src/main/resources/application.yml
@@ -5,17 +5,18 @@ spring:
         dashboard: localhost:8080 # 指定 Sentinel 控制台的地址
         port: 8719 # 它是客户端和控制台通信的端口，如果被占用了，就会从8719往后扫描直到未占用的端口
       eager: true # 禁止控制台懒加载
-      datasource: # sentinel 的规则持久化，相关参数参考：com.alibaba.cloud.sentinel.datasource.config.NacosDataSourceProperties
-        ds1: # 把 sentinel 的流控规则放到 spring.cloud.sentinel.datasource.ds1 里面，ds1 可以随意起名字，比如 ds0,ds1
-          nacos:
-            namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82
-            username: nacos
-            password: 654321
-            server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868
-            data-id: sentinel
-            group-id: DEFAULT_GROUP
-            data-type: json
-            rule-type: flow # 规则类型，flow=流量控制,degrade=熔断降级,system=系统规则,authority=授权规则,param-flow=热点规则。取值参考：org.springframework.cloud.alibaba.sentinel.datasource.RuleType
+        # 下面这段注释的配置开启了后，则sentinel 的本地持久化会失效
+#      datasource: # sentinel 的规则持久化，相关参数参考：com.alibaba.cloud.sentinel.datasource.config.NacosDataSourceProperties
+#        ds1: # 把 sentinel 的流控规则放到 spring.cloud.sentinel.datasource.ds1 里面，ds1 可以随意起名字，比如 ds0,ds1
+#          nacos:
+#            namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82
+#            username: nacos
+#            password: 654321
+#            server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868
+#            data-id: sentinel
+#            group-id: DEFAULT_GROUP
+#            data-type: json
+#            rule-type: flow # 规则类型，flow=流量控制,degrade=熔断降级,system=系统规则,authority=授权规则,param-flow=热点规则。取值参考：org.springframework.cloud.alibaba.sentinel.datasource.RuleType
             # 还需要到 nacos 对应的命名空间下添加 json 配置
             # [
             #    {
