--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<packaging>pom</packaging>
 	<groupId>com.example</groupId>
 	<artifactId>springcloud_demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${revision}</version>
 	<name>springcloud_demo</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -22,6 +22,8 @@
 <!--	</parent>-->
 
 	<properties>
+		<!-- 可用这个标签来统一管理本项目的所有版本号 -->
+		<revision>1.0</revision>
 		<maven.compiler.source>8</maven.compiler.source>
 		<maven.compiler.target>8</maven.compiler.target>
 		<!-- 注意版本要匹配：
