--- a/springcloud_producer/src/main/resources/bootstrap.yml
+++ b/springcloud_producer/src/main/resources/bootstrap.yml
@@ -8,6 +8,8 @@ spring:
     # nacos
     nacos:
       discovery: # 把本项目注册到下面的配置下
-        server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 服务注册中心地址
-        namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82
+#        server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 服务注册中心地址
+        server-addr: 127.0.0.1:8848 # Nacos 服务注册中心地址
+#        namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82
+        namespace: dev
         group: g_nacos_01 # 命名空间和group可以和其他的服务完全相同，这样会有负载均衡的效果
