--- a/springcloud-gateway/pom.xml
+++ b/springcloud-gateway/pom.xml
@@ -7,9 +7,9 @@
         <groupId>com.example</groupId>
         <version>${revision}</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>springcloud-nacos</artifactId>
+
+    <artifactId>springcloud-gateway</artifactId>
     <version>demo-${revision}</version>
 
     <properties>
@@ -18,21 +18,21 @@
     </properties>
 
     <dependencies>
-        <!-- web -->
-        <!-- 必须要有 web 依赖才能把项目注册到 nacos -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!-- nacos 服务注册与发现 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
-        <!-- nacos config 配置 -->
+
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.13</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
