--- a/springcloud-netty2/pom.xml
+++ b/springcloud-netty2/pom.xml
@@ -5,28 +5,15 @@
     <parent>
         <artifactId>springcloud_demo</artifactId>
         <groupId>com.example</groupId>
-        <version>${revision}</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud_consumer</artifactId>
-    <version>demo-${revision}</version>
+    <artifactId>springcloud-netty2</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <!-- web -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <!-- nacos 服务注册与发现 -->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-        </dependency>
-    </dependencies>
 </project>
