--- a/springcloud-ribbon/pom.xml
+++ b/springcloud-ribbon/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <!-- web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- ribbon 负载均衡-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
