--- a/springcloud_producer/pom.xml
+++ b/springcloud_producer/pom.xml
@@ -18,6 +18,11 @@
     </properties>
 
     <dependencies>
+        <!-- web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- nacos 服务注册与发现 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
