--- a/springcloud-nacos/src/main/resources/bootstrap-dev.yml
+++ b/springcloud-nacos/src/main/resources/bootstrap-dev.yml
@@ -7,9 +7,11 @@ spring:
 #        username: nacos
 #        password: 654321
         prefix: test01 # 不配置该属性时，配置列表的 data-id：app-nacos-dev.yaml，配置了后，为 test01-dev.yaml，即（项目名或前缀名） + '-' +（环境名）.yaml
-        server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 作为配置中心地址
+#        server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 作为配置中心地址
+        server-addr: 127.0.0.1:8848 # Nacos 作为配置中心地址
         file-extension: yaml # 指定yaml格式的配置
-        namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82 # 该属性主要用于区分环境。指定命名空间id，默认在命名空间public下
+#        namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82 # 该属性主要用于区分环境。指定命名空间id，默认在命名空间public下
+        namespace: dev # 该属性主要用于区分环境。指定命名空间id，默认在命名空间public下
         group: g_nacos_01 # 区分不同应⽤。同⼀个环境内，不同应⽤的配置，通过group来区分。
         refresh-enabled: true # 是否禁止自动刷新，默认true
 
@@ -48,6 +50,7 @@ spring:
 #          refresh: true
 
       discovery: # 把本项目注册到下面的配置下，如果不配置，则会默认注册到 public 下面
-        server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 服务注册中心地址
-        namespace: 30e9cb88-4054-4714-8dbc-d71c8e960e82
+#        server-addr: 192.168.51.169:8848,192.168.51.169:8858,192.168.51.169:8868 # Nacos 服务注册中心地址
+        server-addr: 127.0.0.1:8848 # Nacos 服务注册中心地址
+        namespace: dev
         group: g_nacos_01
